# manta

./: .gitignore  NOTICE  README.md  create_manta_project.py  demo_generator.py  demo_manta.py  pyproject.toml  test_meso_generation.py
manta/agents/: standard.py
manta/core/: agent.py  meso.py  outcomes.py  pareto.py  preferences.py  strategy.py
manta/manta/core/: agent.py  negotiation.py
manta/negotiation/: runner.py
tests/: test_agents.py  test_math_core.py  test_runner.py
